--- a/src/Usergui/Admin/FXMLAdmin.fxml
+++ b/src/Usergui/Admin/FXMLAdmin.fxml
@@ -3,85 +3,82 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="556.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.AdminController">
    <children>
-      <GridPane prefHeight="541.0" prefWidth="700.0">
-        <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="360.0" minWidth="10.0" prefWidth="254.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="511.0" minWidth="10.0" prefWidth="344.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="284.0" minWidth="10.0" prefWidth="284.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <ImageView fitHeight="173.0" fitWidth="432.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
-               <image>
-                  <Image url="@../../icons/logo.PNG" />
-               </image>
-            </ImageView>
-            <Button mnemonicParsing="false" onAction="#EmployeeTab" prefHeight="186.0" prefWidth="327.0" style="-fx-border-color: #000000; -fx-background-color: #87CEFA;" text="Employee">
-               <graphic>
-                  <ImageView fitHeight="54.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
+      <BorderPane fx:id="BorderPane" prefHeight="200.0" prefWidth="200.0">
+         <left>
+            <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+               <children>
+                  <ImageView fitHeight="150.0" fitWidth="271.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../icons/addEmployee.png" />
+                        <Image url="@../../icons/logo.PNG" />
                      </image>
                   </ImageView>
-               </graphic>
-            </Button>
-            <Button mnemonicParsing="false" prefHeight="219.0" prefWidth="483.0" style="-fx-border-color: #000000; -fx-background-color: #87CEFA;" text="Export data" GridPane.rowIndex="2">
-               <graphic>
-                  <ImageView fitHeight="45.0" fitWidth="49.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../icons/data.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-            <Button mnemonicParsing="false" prefHeight="234.0" prefWidth="332.0" style="-fx-border-color: #000000; -fx-background-color: #87CEFA;" text="       Patients" GridPane.columnIndex="2" GridPane.rowIndex="1">
-               <graphic>
-                  <ImageView fitHeight="58.0" fitWidth="64.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../icons/medicalhistory.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-            <Button mnemonicParsing="false" prefHeight="220.0" prefWidth="370.0" style="-fx-border-color: #000000; -fx-background-color: #87CEFA;" text="Arranging Hosptial" GridPane.columnIndex="2" GridPane.rowIndex="2">
-               <graphic>
-                  <ImageView fitHeight="48.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../icons/hosptial.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-            <Button mnemonicParsing="false" prefHeight="194.0" prefWidth="393.0" style="-fx-border-color: #000000; -fx-background-color: #87CEFA;" text="Admin Guide" GridPane.rowIndex="1">
-               <graphic>
-                  <ImageView fitHeight="52.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../icons/guide.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-            <Button mnemonicParsing="false" prefHeight="216.0" prefWidth="514.0" style="-fx-border-color: #000000; -fx-background-color: #87CEFA;" text="Appointment" GridPane.columnIndex="1" GridPane.rowIndex="2">
-               <graphic>
-                  <ImageView fitHeight="57.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../icons/appointment.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-         </children>
-      </GridPane>
+                  <Button mnemonicParsing="false" onAction="#PatientTab" prefHeight="234.0" prefWidth="332.0" style="-fx-border-color: #000000; -fx-background-color: #87CEFA;" text="       Patients">
+                     <graphic>
+                        <ImageView fitHeight="58.0" fitWidth="64.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../icons/medicalhistory.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#EmployeeTab" prefHeight="186.0" prefWidth="327.0" style="-fx-border-color: #000000; -fx-background-color: #87CEFA;" text="Employee">
+                     <graphic>
+                        <ImageView fitHeight="54.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../icons/addEmployee.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button mnemonicParsing="false" prefHeight="219.0" prefWidth="483.0" style="-fx-border-color: #000000; -fx-background-color: #87CEFA;" text="Export data">
+                     <graphic>
+                        <ImageView fitHeight="45.0" fitWidth="49.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../icons/data.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button mnemonicParsing="false" prefHeight="220.0" prefWidth="370.0" style="-fx-border-color: #000000; -fx-background-color: #87CEFA;" text="Arranging Hosptial">
+                     <graphic>
+                        <ImageView fitHeight="48.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../icons/hosptial.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button mnemonicParsing="false" prefHeight="194.0" prefWidth="393.0" style="-fx-border-color: #000000; -fx-background-color: #87CEFA;" text="Admin Guide">
+                     <graphic>
+                        <ImageView fitHeight="52.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../icons/guide.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button mnemonicParsing="false" prefHeight="216.0" prefWidth="514.0" style="-fx-border-color: #000000; -fx-background-color: #87CEFA;" text="Appointment">
+                     <graphic>
+                        <ImageView fitHeight="57.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../icons/appointment.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+               </children>
+            </VBox>
+         </left>
+         <center>
+            <AnchorPane prefHeight="515.0" prefWidth="629.0" BorderPane.alignment="CENTER" />
+         </center>
+      </BorderPane>
    </children>
 </StackPane>
