--- a/src/Usergui/Admin/FXMLPatient.fxml
+++ b/src/Usergui/Admin/FXMLPatient.fxml
@@ -1,21 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.PatientController">
-    <stylesheets>
-        <URL value="@fxmlpatientgui.css" />
-    </stylesheets>
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.PatientController">
    <children>
-      <Button layoutX="277.0" layoutY="251.0" mnemonicParsing="false" onAction="#ButtonGoToLogin" prefHeight="36.0" prefWidth="63.0" text="Go back" />
-      <Text layoutX="289.0" layoutY="135.0" strokeType="OUTSIDE" strokeWidth="0.0" text="patient" wrappingWidth="84.13671875">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Text>
+      <Label layoutX="225.0" layoutY="158.0" prefHeight="109.0" prefWidth="146.0" text="Patient " />
    </children>
 </AnchorPane>
