Removed pervious server files.

--- a/src/Usergui/Admin/FXMLHosptialEmployees.fxml
+++ b/src/Usergui/Admin/FXMLHosptialEmployees.fxml
@@ -9,7 +9,8 @@
 <?import javafx.scene.layout.VBox?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="515.0" prefWidth="597.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="515.0" prefWidth="597.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.HosptialEmployeesController">
+
    <children>
       <VBox layoutX="453.0" layoutY="168.0" prefHeight="178.0" prefWidth="126.0">
          <children>
