--- a/src/Usergui/Admin/FXMLHosptialEmployees.fxml
+++ b/src/Usergui/Admin/FXMLHosptialEmployees.fxml
@@ -8,25 +8,24 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="515.0" prefWidth="597.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.HosptialEmployeesController">
 
    <children>
       <VBox layoutX="453.0" layoutY="168.0" prefHeight="178.0" prefWidth="126.0">
          <children>
-            <Button mnemonicParsing="false" prefHeight="61.0" prefWidth="126.0" text="Add Empoyee" />
+            <Button mnemonicParsing="false" onAction="#EmployeeTab" prefHeight="61.0" prefWidth="126.0" text="Add Empoyee" />
             <Button mnemonicParsing="false" prefHeight="59.0" prefWidth="126.0" text="Delete Employee" />
             <Button mnemonicParsing="false" prefHeight="58.0" prefWidth="126.0" text="Edit Employee" />
          </children>
       </VBox>
-      <TableView layoutX="13.0" layoutY="100.0" prefHeight="402.0" prefWidth="412.0">
+      <TableView fx:id="tabelView" layoutX="13.0" layoutY="100.0" prefHeight="402.0" prefWidth="412.0">
         <columns>
-          <TableColumn prefWidth="128.80001521110535" text="First name" />
-          <TableColumn prefWidth="156.8000030517578" text="Department" />
-            <TableColumn prefWidth="135.2000732421875" text="Job Title" />
+          <TableColumn fx:id="firstName" prefWidth="128.80001521110535" text="First name" />
+          <TableColumn fx:id="department" prefWidth="156.8000030517578" text="Department" />
+            <TableColumn fx:id="jobTitle" prefWidth="135.2000732421875" text="Job Title" />
         </columns>
       </TableView>
-      <TextField layoutX="97.0" layoutY="55.0" />
+      <TextField fx:id="filterField" layoutX="97.0" layoutY="55.0" />
       <Label layoutX="14.0" layoutY="59.0" prefHeight="18.0" prefWidth="65.0" text="Search box" />
    </children>
 </AnchorPane>
