Adding Room class

--- a/src/Usergui/Admin/FXMLHosptialEmployees.fxml
+++ b/src/Usergui/Admin/FXMLHosptialEmployees.fxml
@@ -11,7 +11,7 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="515.0" prefWidth="597.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.HosptialEmployeesController">
 
    <children>
-      <VBox layoutX="453.0" layoutY="168.0" prefHeight="178.0" prefWidth="126.0">
+      <VBox layoutX="453.0" layoutY="168.0" prefHeight="178.0" prefWidth="126.0" spacing="15.0">
          <children>
             <Button mnemonicParsing="false" onAction="#EmployeeTab" prefHeight="61.0" prefWidth="126.0" text="Add Empoyee" />
             <Button mnemonicParsing="false" prefHeight="59.0" prefWidth="126.0" text="Delete Employee" />
