--- a/src/Usergui/Admin/FXMLHosptialEmployeesForm.fxml
+++ b/src/Usergui/Admin/FXMLHosptialEmployeesForm.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="556.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLHosptialEmployeesFormController">
+<AnchorPane id="AnchorPane" prefHeight="556.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.admin.FXMLHosptialEmployeesFormController">
     <stylesheets>
         <URL value="@fxmlhosptialemployeesform.css" />
     </stylesheets>
