--- a/src/Usergui/Admin/FXMLAdmin.fxml
+++ b/src/Usergui/Admin/FXMLAdmin.fxml
@@ -37,7 +37,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="219.0" prefWidth="483.0" style="-fx-border-color: #000000; -fx-background-color: #87CEFA;" text="Export data">
+                  <Button mnemonicParsing="false" onAction="#ExportDataTab" prefHeight="219.0" prefWidth="483.0" style="-fx-border-color: #000000; -fx-background-color: #87CEFA;" text="Export data">
                      <graphic>
                         <ImageView fitHeight="45.0" fitWidth="49.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -46,7 +46,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#HosptialArragment" prefHeight="220.0" prefWidth="370.0" style="-fx-border-color: #000000; -fx-background-color: #87CEFA;" text="Arranging Hosptial">
+                  <Button mnemonicParsing="false" onAction="#HosptialArragmentTab" prefHeight="220.0" prefWidth="370.0" style="-fx-border-color: #000000; -fx-background-color: #87CEFA;" text="Arranging Hosptial">
                      <graphic>
                         <ImageView fitHeight="48.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -55,7 +55,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="194.0" prefWidth="393.0" style="-fx-border-color: #000000; -fx-background-color: #87CEFA;" text="Admin Guide">
+                  <Button mnemonicParsing="false" onAction="#AdminGuideTab" prefHeight="194.0" prefWidth="393.0" style="-fx-border-color: #000000; -fx-background-color: #87CEFA;" text="Admin Guide">
                      <graphic>
                         <ImageView fitHeight="52.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -64,9 +64,9 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="216.0" prefWidth="514.0" style="-fx-border-color: #000000; -fx-background-color: #87CEFA;" text="Appointment">
+                  <Button mnemonicParsing="false" onAction="#ManageAppointmentsTab" prefHeight="216.0" prefWidth="514.0" style="-fx-border-color: #000000; -fx-background-color: #87CEFA;" text="Manage Appointments">
                      <graphic>
-                        <ImageView fitHeight="57.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="57.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../icons/appointment.png" />
                            </image>
