--- a/src/Usergui/FXMLPatient.fxml
+++ b/src/Usergui/FXMLPatient.fxml
@@ -1,29 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="529.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.PatientController">
    <children>
-      <VBox layoutX="454.0" layoutY="100.0" prefHeight="200.0" prefWidth="132.0" spacing="15.0">
-         <children>
-            <Button mnemonicParsing="false" prefHeight="55.0" prefWidth="138.0" text="View medical history" />
-            <Button mnemonicParsing="false" prefHeight="53.0" prefWidth="132.0" text="Edit patient data" />
-         </children>
-      </VBox>
-      <TableView fx:id="tabelViewPatients" layoutX="21.0" layoutY="86.0" prefHeight="432.0" prefWidth="413.0">
-        <columns>
-          <TableColumn fx:id="fistName" prefWidth="141.0" text="First Name" />
-          <TableColumn fx:id="lastName" prefWidth="119.0" text="Last Name" />
-            <TableColumn fx:id="typeOfPatient" prefWidth="152.0" text="Type of patient" />
-        </columns>
-      </TableView>
-      <TextField fx:id="filterFieldPatient" layoutX="110.0" layoutY="40.0" />
-      <Label layoutX="41.0" layoutY="44.0" prefHeight="17.0" prefWidth="62.0" text="Search" />
+      <VBox layoutX="454.0" layoutY="100.0" prefHeight="200.0" prefWidth="132.0" spacing="15.0" />
+      <Label layoutX="176.0" layoutY="192.0" prefHeight="53.0" prefWidth="125.0" text="Patient">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
