--- a/src/Usergui/patient/FXMLPatient.fxml
+++ b/src/Usergui/patient/FXMLPatient.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -19,6 +20,7 @@
                         <Image url="@../../icons/logo.PNG" />
                      </image>
                   </ImageView>
+                  <Label contentDisplay="CENTER" prefHeight="38.0" prefWidth="211.0" text="Username: unknown" />
                   <Button mnemonicParsing="false" onAction="#AppointmentPatientTab" prefHeight="89.0" prefWidth="211.0" style="-fx-background-color: #87CEFA; -fx-border-color: #000000;" text="      Appointment">
                      <graphic>
                         <ImageView fitHeight="50.0" fitWidth="49.0" pickOnBounds="true" preserveRatio="true">
