--- a/src/Usergui/Admin/FXMLPatientView.fxml
+++ b/src/Usergui/Admin/FXMLPatientView.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -8,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="529.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.admin.PatientViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="529.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.admin.PatientViewController">
    <children>
       <VBox layoutX="454.0" layoutY="100.0" prefHeight="200.0" prefWidth="132.0" spacing="15.0">
          <children>
@@ -16,13 +19,11 @@
             <Button mnemonicParsing="false" prefHeight="53.0" prefWidth="132.0" text="Edit patient data" />
          </children>
       </VBox>
-      <TableView fx:id="tableViewPatients" layoutX="21.0" layoutY="86.0" prefHeight="434.0" prefWidth="394.0">
-        <columns>
-          <TableColumn fx:id="firstName" prefWidth="121.0" text="First Name" />
-          <TableColumn fx:id="lastName" prefWidth="126.0" text="Last Name" />
-           <TableColumn fx:id="typeOfPatient" prefWidth="146.0" text="Type of patient" />
-        </columns>
-      </TableView>
+      <ScrollPane layoutX="21.0" layoutY="86.0" prefViewportHeight="434.0" prefViewportWidth="394.0">
+         <content>
+            <TableView fx:id="tableViewPatients" layoutX="21.0" layoutY="86.0" prefHeight="434.0" prefWidth="394.0" />
+         </content>
+      </ScrollPane>
       <TextField fx:id="filterFieldPatient" layoutX="110.0" layoutY="40.0" />
       <Label layoutX="41.0" layoutY="44.0" prefHeight="17.0" prefWidth="62.0" text="Search" />
    </children>
