--- a/src/Usergui/FXMLRegistrationSystem.fxml
+++ b/src/Usergui/FXMLRegistrationSystem.fxml
@@ -2,25 +2,73 @@
 
 <?import java.net.URL?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.RegistrationSystemController">
     <stylesheets>
         <URL value="@fxmlregistrationsystem.css" />
     </stylesheets>
    <children>
-      <VBox alignment="CENTER" layoutX="108.0" layoutY="59.0" prefHeight="200.0" prefWidth="100.0">
-         <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Registration Module" textAlignment="CENTER" wrappingWidth="384.13671875">
+      <BorderPane layoutX="161.0" layoutY="100.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <top>
+            <Label alignment="CENTER" prefHeight="88.0" prefWidth="600.0" style="-fx-background-color: #add8e6; -fx-border-color: #000000;" text="Registration" BorderPane.alignment="CENTER">
                <font>
-                  <Font size="27.0" />
-               </font>
-            </Text>
-         </children>
-      </VBox>
-      <Button layoutX="441.0" layoutY="321.0" mnemonicParsing="false" onAction="#ButtonGoToLogin" text="Go back" />
+                  <Font name="System Bold" size="27.0" />
+               </font></Label>
+         </top>
+         <center>
+            <GridPane BorderPane.alignment="CENTER">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="10.0" prefWidth="282.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="413.0" minWidth="10.0" prefWidth="318.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="52.0" prefWidth="279.0" text="ID">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font></Label>
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="67.0" prefWidth="282.0" text="First name" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font></Label>
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="94.0" prefWidth="420.0" text="Last name" GridPane.rowIndex="2">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font></Label>
+                  <TextField fx:id="idField" maxWidth="-Infinity" minWidth="174.0" prefHeight="33.0" prefWidth="174.0" GridPane.columnIndex="1" />
+                  <TextField fx:id="firstNameField" maxWidth="-Infinity" prefHeight="33.0" prefWidth="174.0" GridPane.columnIndex="1" GridPane.hgrow="NEVER" GridPane.rowIndex="1" />
+                  <TextField fx:id="lastNameField" maxWidth="-Infinity" prefHeight="35.0" prefWidth="174.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+               </children>
+            </GridPane>
+         </center>
+         <bottom>
+            <AnchorPane prefHeight="66.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Button layoutX="126.0" layoutY="7.0" mnemonicParsing="false" onAction="#registerUser" prefHeight="50.0" prefWidth="135.0" style="-fx-background-color: #add8e6; -fx-border-color: #000000;" text="Confirm">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="374.0" layoutY="7.0" mnemonicParsing="false" onAction="#ButtonGoToLogin" prefHeight="50.0" prefWidth="135.0" style="-fx-background-color: #add8e6; -fx-border-color: #000000;" text="Exit">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                  </Button>
+               </children>
+            </AnchorPane>
+         </bottom>
+      </BorderPane>
    </children>
 </AnchorPane>
