--- a/src/Usergui/doctor/FXMLMedical.fxml
+++ b/src/Usergui/doctor/FXMLMedical.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="520.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.MedicalController">
    <children>
@@ -20,32 +21,46 @@
                      </image>
                   </ImageView>
                   <Label fx:id="StatusField" prefHeight="24.0" prefWidth="285.0" text="Username: unknown" />
-                  <Button mnemonicParsing="false" onAction="#ViewPatientsMedicalHistorytTab" prefHeight="87.0" prefWidth="263.0" text="Patient medical history">
+                  <Button mnemonicParsing="false" onAction="#ViewPatientsMedicalHistorytTab" prefHeight="87.0" prefWidth="263.0" style="-fx-border-color: #000000; -fx-background-color: #87CEFA;" text="Patient medical history">
                      <graphic>
-                        <ImageView fitHeight="62.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="52.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../icons/medicalhistory.png" />
                            </image>
                         </ImageView>
                      </graphic>
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#DoctorGuidetTab" prefHeight="89.0" prefWidth="263.0" text=" Doctor guide">
+                  <Button mnemonicParsing="false" onAction="#DoctorGuidetTab" prefHeight="89.0" prefWidth="263.0" style="-fx-background-color: #87CEFA; -fx-border-color: #000000;" text=" Doctor guide">
                      <graphic>
-                        <ImageView fitHeight="66.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="51.0" fitWidth="51.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../icons/guide.png" />
                            </image>
                         </ImageView>
                      </graphic>
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#ViewAppointmenttTab" prefHeight="84.0" prefWidth="263.0" text="View Appointments">
+                  <Button mnemonicParsing="false" onAction="#ViewAppointmenttTab" prefHeight="84.0" prefWidth="263.0" style="-fx-background-color: #87CEFA; -fx-border-color: #000000;" text="View Appointments">
                      <graphic>
-                        <ImageView fitHeight="71.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="51.0" fitWidth="57.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../icons/appointment.png" />
                            </image>
                         </ImageView>
                      </graphic>
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#logout" prefHeight="78.0" prefWidth="263.0" style="-fx-background-color: #87CEFA; -fx-border-color: #000000;" text="Logout">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
                   </Button>
                </children>
             </VBox>
