--- a/src/Usergui/doctor/FXMLViewAppointment.fxml
+++ b/src/Usergui/doctor/FXMLViewAppointment.fxml
@@ -8,14 +8,14 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TextField layoutX="224.0" layoutY="42.0" />
+      <TextField fx:id="SearchBox" layoutX="224.0" layoutY="42.0" />
       <Label layoutX="151.0" layoutY="46.0" text="Search box" />
-      <TableView layoutX="63.0" layoutY="87.0" prefHeight="276.0" prefWidth="471.0">
+      <TableView fx:id="tabelView" layoutX="63.0" layoutY="87.0" prefHeight="276.0" prefWidth="471.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="Patient ID" />
-          <TableColumn prefWidth="94.0" text="Patient Name" />
-            <TableColumn prefWidth="103.0" text="Date" />
-            <TableColumn prefWidth="198.0" text="Patient conditions" />
+          <TableColumn fx:id="patientID" prefWidth="75.0" text="Patient ID" />
+          <TableColumn fx:id="patientName" prefWidth="94.0" text="Patient Name" />
+            <TableColumn fx:id="date" prefWidth="103.0" text="Date" />
+            <TableColumn fx:id="patientCondition" prefWidth="198.0" text="Patient conditions" />
         </columns>
       </TableView>
    </children>
