--- a/src/Usergui/Admin/FXMLHosptialEmployees.fxml
+++ b/src/Usergui/Admin/FXMLHosptialEmployees.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -8,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="515.0" prefWidth="597.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.admin.HosptialEmployeesController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="515.0" prefWidth="597.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.admin.HosptialEmployeesController">
 
    <children>
       <VBox layoutX="453.0" layoutY="168.0" prefHeight="178.0" prefWidth="126.0" spacing="15.0">
@@ -18,13 +21,11 @@
             <Button mnemonicParsing="false" prefHeight="58.0" prefWidth="126.0" text="Edit Employee" />
          </children>
       </VBox>
-      <TableView fx:id="tabelView" layoutX="13.0" layoutY="100.0" prefHeight="402.0" prefWidth="412.0">
-        <columns>
-          <TableColumn fx:id="firstName" prefWidth="128.80001521110535" text="First name" />
-          <TableColumn fx:id="address" prefWidth="156.8000030517578" text="Address" />
-            <TableColumn fx:id="jobTitle" prefWidth="135.2000732421875" text="Job Title" />
-        </columns>
-      </TableView>
+      <ScrollPane layoutX="13.0" layoutY="100.0" prefViewportHeight="402.0" prefViewportWidth="412.0">
+         <content>
+            <TableView fx:id="tabelView" layoutX="13.0" layoutY="100.0" prefHeight="402.0" prefWidth="412.0" />
+         </content>
+      </ScrollPane>
       <TextField fx:id="filterField" layoutX="97.0" layoutY="55.0" />
       <Label layoutX="14.0" layoutY="59.0" prefHeight="18.0" prefWidth="65.0" text="Search box" />
    </children>
